Bootstrap4 fixes (#79)
* Fix hidden headers in task archive.

* .label -> .badge

* Minor task archive styling issues.

* Fix modals.

* Remove unecessary table margin in task archive problem group.

* Fix notifications dropdown being truncated after reload.

* Fix usergroups tooltips.

--- a/oioioi/base/static/scss/_navbar.scss
+++ b/oioioi/base/static/scss/_navbar.scss
@@ -21,8 +21,8 @@ $oioioi-navbar-avatar-size: 25px !default;
 $oioioi-navbar-time-changed-background: darken(theme-color("primary"), 20) !default;
 $oioioi-navbar-user-changed-background: darken(theme-color("danger"), 20) !default;
 
-// Breakpoint at which admin labels get shrunk to save some space
-$oioioi-navbar-label-lg-width: 80px !default;
+// Breakpoint at which admin badges get shrunk to save some space
+$oioioi-navbar-badge-lg-width: 80px !default;
 $oioioi-navbar-contest-max-width: 220px !default;
 $oioioi-navbar-contest-md-max-width: 160px !default;
 $oioioi-navbar-contest-sm-max-width: 120px !default;
@@ -61,7 +61,7 @@ body {
     background: $oioioi-navbar-user-changed-background;
   }
 
-  .label {
+  .badge {
     vertical-align: middle;
   }
 
@@ -77,7 +77,7 @@ body {
     text-decoration: none;
     white-space: nowrap;
 
-    > .label {
+    > .badge {
       @include text-overflow();
       display: inline-block;
       margin-right: 1em;
@@ -164,14 +164,14 @@ body {
 
 
 // Large screens
-// * Labels get shrunk
+// * Badges get shrunk
 @include media-breakpoint-down(lg) {
   .oioioi-navbar,
   .oioioi-navbar > .oioioi-navbar__extra,
   .oioioi-navbar__menu-uncollapsed {
-    > a > .label,
-    .dropdown > a > .label {
-      max-width: $oioioi-navbar-label-lg-width;
+    > a > .badge,
+    .dropdown > a > .badge {
+      max-width: $oioioi-navbar-badge-lg-width;
     }
   }
 }
@@ -180,7 +180,7 @@ body {
 // * Menu replaces brand
 // * Navbar links collapse to a dropdown menu
 // * Contest picker max width decreases
-// * Username and labels gets hidden (only icons)
+// * Username and badges gets hidden (only icons)
 @include media-breakpoint-down(md) {
   .oioioi-navbar {
     > .oioioi-navbar__menu {
@@ -210,11 +210,11 @@ body {
     }
 
 
-    .label-full {
+    .badge-full {
       display: none;
     }
 
-    .label-short {
+    .badge-short {
       display: inline;
     }
   }
